# EH-Infostealer

EH-Attacker-PublicWebServer/: README.md  app.py  uploads.py  wsgi.py
EH-Attacker-PublicWebServer/board/static/: styles.css
EH-Attacker-PublicWebServer/templates/: base.html  check-availability.html  uploads.html
EH-Compromised-WebServer/: edited.html  index.html
EH-InfoStealer-Malware/: READ.ME.md
Eh-Infostealer/Infostealer-Malware/: CMakeLists.txt
Eh-Infostealer/Infostealer-Shellcode/: CMakeLists.txt  app.manifest
Eh-Infostealer/Infostealer-Shellcode/include/: lib.h
Eh-Infostealer/Infostealer-Shellcode/src/: connection.cpp  connection.h  copy-upload.cpp  copy-upload.h  curl.cpp  curl.h  get-directory.cpp  get-directory.h  main.cpp
